--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio Profissional Gustavo Ramos</title>
+    <!--Google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;0,900;1,300;1,700;1,900&display=swap" rel="stylesheet">
+
+    <!-- Devicon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
+    <!-- Css do Projeto -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Portfólio Gustavo Ramos</title>
 </head>
+
 <body>
     <h1>Gustavo Ramos</h1>
+
+    <ion-icon class="icons" name="heart"></ion-icon>
+
+    
+    <i class="devicon-adonisjs-original"></i>   
+    <!--Ion Icons  -->
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
+
 </html>
