--- a/index.html
+++ b/index.html
@@ -53,36 +53,32 @@
                     <i class="devicon-html5-plain colored"></i>
                     <i class="devicon-css3-plain colored"></i>
                     <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-typescript-plain colored"></i>
+                    <i class="devicon-angularjs-plain colored"></i>
+                    <i class="devicon-react-original-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
                     <p id="skills-title">Back-end</p>
-                    <i class="devicon-html5-plain colored"></i>
-                    <i class="devicon-css3-plain colored"></i>
-                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-java-plain-wordmark colored"></i>
+                    <i class="devicon-nodejs-plain-wordmark colored"></i>
+                    <i class="devicon-apache-line-wordmark"></i>
+                </div>
+                <div class="skills-box">
+                    <p id="skills-title">Sistemas Operacionais</p>
+                    <i class="devicon-ubuntu-plain-wordmark colored"></i>
+                    <i class="devicon-windows8-original colored"></i>
                 </div>
                 <div class="skills-box">
                     <p id="skills-title">Databases</p>
-                    <i class="devicon-html5-plain colored"></i>
-                    <i class="devicon-css3-plain colored"></i>
-                    <i class="devicon-javascript-plain colored"></i>
-                </div>
-                <div class="skills-box">
-                    <p id="skills-title">Front-end Frameworks</p>
-                    <i class="devicon-html5-plain colored"></i>
-                    <i class="devicon-css3-plain colored"></i>
-                    <i class="devicon-javascript-plain colored"></i>
-                </div>
-                <div class="skills-box">
-                    <p id="skills-title">Back-end Frameworks</p>
-                    <i class="devicon-html5-plain colored"></i>
-                    <i class="devicon-css3-plain colored"></i>
-                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-oracle-original colored"></i>
+                    <i class="devicon-mysql-plain-wordmark colored"></i>
+                    <i class="devicon-postgresql-plain-wordmark coloreds"></i>
                 </div>
                 <div class="skills-box">
                     <p id="skills-title">Tools</p>
-                    <i class="devicon-html5-plain colored"></i>
-                    <i class="devicon-css3-plain colored"></i>
-                    <i class="devicon-github-original colored"></i>
+                    <i class="devicon-github-original-wordmark colored"></i>
+                    <i class="devicon-jira-plain-wordmark colored"></i>
+                    <i class="devicon-trello-plain-wordmark colored"></i>
                 </div>
             </div>
         </section>
