--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <div class="skills-box">
                     <p class="skills-title">Back-end</p>
                     <i class="devicon-java-plain-wordmark colored"></i>
+                    <i class="devicon-spring-plain-wordmark"></i>
                     <i class="devicon-nodejs-plain-wordmark colored"></i>
                     <i class="devicon-apache-line-wordmark"></i>
                 </div>
@@ -79,6 +80,7 @@
                     <i class="devicon-github-original-wordmark"></i>
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
+                    <i class="devicon-docker-plain-wordmark colored"></i>
                 </div>
             </div>
         </section>
