--- a/index.html
+++ b/index.html
@@ -74,12 +74,15 @@
                     <i class="devicon-postgresql-plain-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
-                    <p class="skills-title">Tools</p>
-                    <i class="devicon-git-plain-wordmark colored"></i>
-                    <i class="devicon-github-original-wordmark"></i>
+                    <p class="skills-title">Agile Met. Tools</p>
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
+                </div>
+                <div class="skills-box">
+                    <p class="skills-title">Tools</p>
                     <i class="devicon-docker-plain-wordmark colored"></i>
+                    <i class="devicon-git-plain-wordmark colored"></i>
+                    <i class="devicon-github-original-wordmark"></i>
                     <i class="devicon-heroku-plain-wordmark colored"></i>
                     <i class="devicon-apache-line-wordmark"></i>
                 </div>
