--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <i class="devicon-postgresql-plain-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
-                    <p class="skills-title">Agile Met. Tools</p>
+                    <p class="skills-title">Agile Tools</p>
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
                 </div>
