--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Front-end</p>
+                    <i class="devicon-bootstrap-plain-wordmark"></i>
                     <i class="devicon-html5-plain-wordmark colored"></i>
                     <i class="devicon-css3-plain-wordmark colored"></i>
                 </div>
