--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 <div class="skills-box">
                     <p class="skills-title">Back-end</p>
                     <i class="devicon-java-plain-wordmark colored"></i>
-                    <i class="devicon-spring-plain-wordmark"></i>
+                    <i class="devicon-spring-plain-wordmark colored"></i>
                     <i class="devicon-javascript-plain colored"></i>
                     <i class="devicon-typescript-plain colored"></i>
-                    <i class="devicon-nodejs-plain-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Front-end</p>
-                    <i class="devicon-bootstrap-plain-wordmark"></i>
+                    <i class="devicon-react-original-wordmark colored"></i>
                     <i class="devicon-html5-plain-wordmark colored"></i>
                     <i class="devicon-css3-plain-wordmark colored"></i>
+                    <i class="devicon-bootstrap-plain-wordmark"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">OS</p>
@@ -76,6 +76,7 @@
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Agile Tools</p>
+                    <img id="scrum" src="./img/Scrum.png" alt="Scrum">
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
                 </div>
