--- a/index.html
+++ b/index.html
@@ -76,16 +76,19 @@
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Agile Tools</p>
-                    <img id="scrum" src="./img/Scrum.png" alt="Scrum">
+                    <img class="logo" src="./img/Scrum.png" alt="Scrum">
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
                 </div>
                 <div class="skills-box">
-                    <p class="skills-title">Tools</p>
+                    <p class="skills-title">Cloud</p>
+                    <img class="logo" src="./img/aws.PNG" alt="Aws">
+                </div>
+                <div class="skills-box">
+                    <p class="skills-title">Other Tools</p>
                     <i class="devicon-docker-plain-wordmark colored"></i>
                     <i class="devicon-git-plain-wordmark colored"></i>
                     <i class="devicon-github-original-wordmark"></i>
-                    <i class="devicon-heroku-plain-wordmark colored"></i>
                     <i class="devicon-apache-line-wordmark"></i>
                 </div>
             </div>
