--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <div class="skills-box">
                     <p class="skills-title">Cloud</p>
                     <img class="logo" src="./img/aws.PNG" alt="Aws">
+                    <i class="devicon-heroku-original-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Other Tools</p>
