--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <div class="skills-box">
                     <p class="skills-title">Agile Tools</p>
                     <img class="logo" src="./img/Scrum.png" alt="Scrum">
+                    <img class="logo" src="./img/kanban.PNG" alt="Kanban">
                     <i class="devicon-jira-plain-wordmark colored"></i>
                     <i class="devicon-trello-plain-wordmark"></i>
                 </div>
